--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -104,7 +104,7 @@
     flex-direction: row;
     flex-wrap: wrap;
   }
-  
+
   .work .work_ul li {
     /* float: left; */
     width: 30%;
@@ -115,7 +115,7 @@
     -moz-transition: all .5s 0s ease-out;
     transition: all .5s 0s ease-out;
   }
-  
+
   .work .work_ul li a {
     display: block;
     width: 100%;
@@ -126,19 +126,19 @@
     text-decoration: none;
     color: #333;
   }
-  
+
   .work .work_ul li .img {
     margin: 0;
     line-height: 0;
     overflow: hidden;
     background-size: cover;
   }
-  
+
   .work .work_ul li .img img {
     width: 100%;
     height: auto;
   }
-  
+
   .work .work_ul li .detail_area {
     padding: 4% 4%;
     -webkit-box-sizing: border-box;
@@ -148,33 +148,192 @@
     -moz-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
     transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
   }
-  
+
   .work .work_ul li .detail_area .title {
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
-  
+
   .work .work_ul li:hover {
     box-shadow: 0 0 22.5px rgba(0, 0, 0, 0.589);
   }
-  
+
   .work .work_ul li>a>p>img {
     transform: scale(1);
     transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
   }
-  
+
   .work .work_ul li:hover>a>p>img {
     transform: scale(1.1);
     transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
   }
-  
+
   .work .work_ul li:hover>a>div {
     background-color: #264989;
     color: #fff;
   }
 
+  /* event */
+  .event {
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 60px;
+  }
+
+  .event_ul {
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .event .event_ul li {
+    /* float: left; */
+    margin: 10px;
+    width: 25%;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+
+    -webkit-transition: all .5s 0s ease-out;
+    -moz-transition: all .5s 0s ease-out;
+    transition: all .5s 0s ease-out;
+  }
+
+  .event .event_ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    text-decoration: none;
+    color: #333;
+  }
+
+  .event .event_ul li .img {
+    margin: 0;
+    line-height: 0;
+    overflow: hidden;
+    background-size: cover;
+  }
+
+  .event .event_ul li .img img {
+    width: 100%;
+    height: auto;
+  }
+
+  .event .event_ul li .detail_area {
+    padding: 4% 4%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+
+  .event .event_ul li .detail_area .title {
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .event .event_ul li:hover {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.308);
+  }
+
+  .event .event_ul li>a>p>img {
+    transform: scale(1);
+    transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+
+  .event .event_ul li:hover>a>p>img {
+    transform: scale(1.1);
+    transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+
+  .event .event_ul li:hover>a>div {
+    background-color: #264989;
+    color: #fff;
+  }
+
+  /* team-cards */
+  .team-inner {
+    width: 80%;
+    margin-bottom: 2.5rem;
+  }
+
+  .team-item {
+    width: 33.3%;
+    padding: 15px;
+  }
+
+  .team-item .item-content {
+    overflow: hidden;
+    text-align: center;
+    min-height: 400px;
+    max-height: 400px;
+  }
+
+  .team-item-content img {
+    width: 100%;
+    height: auto;
+  }
+
+  .team-item .item-img {
+    position: relative;
+  }
+
+  /* 
+.team-item-content img:hover {
+  width: 100%;
+  cursor: pointer;
+
+} */
+
+  .team-item-content .item-text {
+    text-align: center;
+  }
+
+  .team-item-content .item-text a {
+    color: #111;
+
+  }
+
+  .team-item-content .item-text h3 {
+    color: #111;
+    margin-top: 1rem;
+    font-weight: bold;
+    text-decoration: underline;
+    opacity: 1;
+    transition-duration: .5s;
+    transition-property: opacity, -webkit-transform;
+    transition-property: transform, opacity, text-decoration;
+  }
+
+  .team-item-content .item-text h3:hover {
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: 400;
+    opacity: 0.65;
+    transition-duration: .5s;
+    transition-property: opacity, -webkit-transform;
+    transition-property: transform, opacity, text-decoration;
+  }
+
+  .team-item-content .item-text p {
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+  }
 }
 
 @media screen and (max-width:1200px) and (min-width:760px) {
@@ -281,7 +440,7 @@
     flex-direction: row;
 
   }
-  
+
   .work .work_ul li {
     /* float: left; */
     width: 45%;
@@ -292,7 +451,7 @@
     -moz-transition: all .5s 0s ease-out;
     transition: all .5s 0s ease-out;
   }
-  
+
   .work .work_ul li a {
     display: block;
     width: 100%;
@@ -303,19 +462,19 @@
     text-decoration: none;
     color: #333;
   }
-  
+
   .work .work_ul li .img {
     margin: 0;
     line-height: 0;
     overflow: hidden;
     background-size: cover;
   }
-  
+
   .work .work_ul li .img img {
     width: 100%;
     height: auto;
   }
-  
+
   .work .work_ul li .detail_area {
     padding: 4% 4%;
     -webkit-box-sizing: border-box;
@@ -325,33 +484,184 @@
     -moz-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
     transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
   }
-  
+
   .work .work_ul li .detail_area .title {
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
-  
+
   .work .work_ul li:hover {
     box-shadow: 0 0 22.5px rgba(0, 0, 0, 0.589);
   }
-  
+
   .work .work_ul li>a>p>img {
     transform: scale(1);
     transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
   }
-  
+
   .work .work_ul li:hover>a>p>img {
     transform: scale(1.1);
     transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
   }
-  
+
   .work .work_ul li:hover>a>div {
     background-color: #264989;
     color: #fff;
   }
 
+  /* event */
+  .event {
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 60px;
+  }
+
+  .event_ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .event .event_ul li {
+    /* float: left; */
+    margin: 10%;
+    width: 80%;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+
+    -webkit-transition: all .5s 0s ease-out;
+    -moz-transition: all .5s 0s ease-out;
+    transition: all .5s 0s ease-out;
+  }
+
+  .event .event_ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    text-decoration: none;
+    color: #333;
+  }
+
+  .event .event_ul li .img {
+    margin: 0;
+    line-height: 0;
+    overflow: hidden;
+    background-size: cover;
+  }
+
+  .event .event_ul li .img img {
+    width: 100%;
+    height: auto;
+  }
+
+  .event .event_ul li .detail_area {
+    padding: 4% 4%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+
+  .event .event_ul li .detail_area .title {
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .event .event_ul li:hover {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.308);
+  }
+
+  .event .event_ul li>a>p>img {
+    transform: scale(1);
+    transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+
+  .event .event_ul li:hover>a>p>img {
+    transform: scale(1.1);
+    transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+
+  .event .event_ul li:hover>a>div {
+    background-color: #264989;
+    color: #fff;
+  }
+
+  /* team-cards */
+  .team-inner {
+    width: 80%;
+    margin-bottom: 2.5rem;
+  }
+
+  .team-item {
+    width: 33.3%;
+    margin: 10px;
+  }
+
+  .team-item .item-content {
+    overflow: hidden;
+    text-align: center;
+    min-height: 400px;
+    max-height: 400px;
+  }
+
+  .team-item-content img {
+    width: 100%;
+    height: auto;
+  }
+
+  .team-item .item-img {
+    position: relative;
+  }
+
+  .team-item-content .item-text {
+    text-align: center;
+  }
+
+  .team-item-content .item-text a {
+    color: #111;
+
+  }
+
+  .team-item-content .item-text h3 {
+    color: #111;
+    margin-top: 1rem;
+    font-weight: bold;
+    text-decoration: underline;
+    opacity: 1;
+    transition-duration: .5s;
+    transition-property: opacity, -webkit-transform;
+    transition-property: transform, opacity, text-decoration;
+  }
+
+  .team-item-content .item-text h3:hover {
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: 400;
+    opacity: 0.65;
+    transition-duration: .5s;
+    transition-property: opacity, -webkit-transform;
+    transition-property: transform, opacity, text-decoration;
+  }
+
+  .team-item-content .item-text p {
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+  }
 }
 
 @media screen and (max-width:760px) {
@@ -458,7 +768,7 @@
     flex-wrap: wrap;
     justify-content: center;
   }
-  
+
   .work .work_ul li {
     /* float: left; */
     width: 80%;
@@ -469,7 +779,7 @@
     -moz-transition: all .5s 0s ease-out;
     transition: all .5s 0s ease-out;
   }
-  
+
   .work .work_ul li a {
     display: block;
     width: 100%;
@@ -480,19 +790,19 @@
     text-decoration: none;
     color: #333;
   }
-  
+
   .work .work_ul li .img {
     margin: 0;
     line-height: 0;
     overflow: hidden;
     background-size: cover;
   }
-  
+
   .work .work_ul li .img img {
     width: 100%;
     height: auto;
   }
-  
+
   .work .work_ul li .detail_area {
     padding: 4% 4%;
     -webkit-box-sizing: border-box;
@@ -502,31 +812,185 @@
     -moz-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
     transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
   }
-  
+
   .work .work_ul li .detail_area .title {
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
-  
+
   .work .work_ul li:hover {
     box-shadow: 0 0 22.5px rgba(0, 0, 0, 0.589);
   }
-  
+
   .work .work_ul li>a>p>img {
     transform: scale(1);
     transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
   }
-  
+
   .work .work_ul li:hover>a>p>img {
     transform: scale(1.1);
     transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
   }
-  
+
   .work .work_ul li:hover>a>div {
     background-color: #264989;
     color: #fff;
+  }
+
+  /* event */
+  .event {
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 60px;
+  }
+
+  .event_ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .event .event_ul li {
+    /* float: left; */
+    margin: 10%;
+    width: 80%;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+
+    -webkit-transition: all .5s 0s ease-out;
+    -moz-transition: all .5s 0s ease-out;
+    transition: all .5s 0s ease-out;
+  }
+
+  .event .event_ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    text-decoration: none;
+    color: #333;
+  }
+
+  .event .event_ul li .img {
+    margin: 0;
+    line-height: 0;
+    overflow: hidden;
+    background-size: cover;
+  }
+
+  .event .event_ul li .img img {
+    width: 100%;
+    height: auto;
+  }
+
+  .event .event_ul li .detail_area {
+    padding: 4% 4%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+
+  .event .event_ul li .detail_area .title {
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .event .event_ul li:hover {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.308);
+  }
+
+  .event .event_ul li>a>p>img {
+    transform: scale(1);
+    transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+
+  .event .event_ul li:hover>a>p>img {
+    transform: scale(1.1);
+    transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+
+  .event .event_ul li:hover>a>div {
+    background-color: #264989;
+    color: #fff;
+  }
+
+  /* team-cards */
+  .team-inner {
+    width: 80%;
+    margin-bottom: 2.5rem;
+    display: inline;
+    float: left;
+  }
+
+  .team-item {
+    width: 80%;
+    margin: 10%;
+    margin-bottom: 50px;
+  }
+
+  .team-item .item-content {
+    text-align: center;
+    min-height: 400px;
+    max-height: 400px;
+  }
+
+  .team-item-content img {
+    width: 100%;
+    height: auto;
+  }
+
+  .team-item .item-img {
+    position: relative;
+  }
+
+  .team-item-content .item-text {
+    text-align: center;
+  }
+
+  .team-item-content .item-text a {
+    color: #111;
+
+  }
+
+  .team-item-content .item-text h3 {
+    color: #111;
+    margin-top: 1rem;
+    font-weight: bold;
+    text-decoration: underline;
+    opacity: 1;
+    transition-duration: .5s;
+    transition-property: opacity, -webkit-transform;
+    transition-property: transform, opacity, text-decoration;
+  }
+
+  .team-item-content .item-text h3:hover {
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: 400;
+    opacity: 0.65;
+    transition-duration: .5s;
+    transition-property: opacity, -webkit-transform;
+    transition-property: transform, opacity, text-decoration;
+  }
+
+  .team-item-content .item-text p {
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
   }
 }
 
@@ -595,7 +1059,7 @@
 .about-icon-item {
   /* display: block; */
   flex-wrap: wrap;
-  margin: 2em;
+  margin: 20px;
 }
 
 /* section */
@@ -836,163 +1300,6 @@
   padding: 10px;
 }
 
-/* team-cards */
-.team-inner {
-  width: 80%;
-  margin-bottom: 2.5rem;
-}
 
-.team-item {
-  width: 33.3%;
-  padding: 15px;
-}
-
-.team-item .item-content {
-  overflow: hidden;
-  text-align: center;
-  min-height: 400px;
-  max-height: 400px;
-}
-
-.team-item-content img {
-  width: 100%;
-  height: auto;
-}
-
-.team-item .item-img {
-  position: relative;
-}
-
-/* 
-.team-item-content img:hover {
-  width: 100%;
-  cursor: pointer;
-
-} */
-
-.team-item-content .item-text {
-  text-align: center;
-}
-
-.team-item-content .item-text a {
-  color: #111;
-
-}
-
-.team-item-content .item-text h3 {
-  color: #111;
-  margin-top: 1rem;
-  font-weight: bold;
-  text-decoration: underline;
-  opacity: 1;
-  transition-duration: .5s;
-  transition-property: opacity, -webkit-transform;
-  transition-property: transform, opacity, text-decoration;
-}
-
-.team-item-content .item-text h3:hover {
-  cursor: pointer;
-  text-decoration: none;
-  font-weight: 400;
-  opacity: 0.65;
-  transition-duration: .5s;
-  transition-property: opacity, -webkit-transform;
-  transition-property: transform, opacity, text-decoration;
-}
-
-.team-item-content .item-text p {
-  text-align: left;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
-}
 
 /* team */
-/* event */
-.event {
-  width: 100%;
-  margin-top: 40px;
-  margin-bottom: 60px;
-}
-
-.event_ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  margin-top: 20px;
-  padding-bottom: 20px;
-}
-
-.event .event_ul li {
-  /* float: left; */
-  width: 25%;
-  position: relative;
-  overflow: hidden;
-  z-index: 0;
-
-  -webkit-transition: all .5s 0s ease-out;
-  -moz-transition: all .5s 0s ease-out;
-  transition: all .5s 0s ease-out;
-}
-
-.event .event_ul li a {
-  display: block;
-  width: 100%;
-  height: 100%;
-  -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
-  -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
-  transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
-  text-decoration: none;
-  color: #333;
-}
-
-.event .event_ul li .img {
-  margin: 0;
-  line-height: 0;
-  overflow: hidden;
-  background-size: cover;
-}
-
-.event .event_ul li .img img {
-  width: 100%;
-  height: auto;
-}
-
-.event .event_ul li .detail_area {
-  padding: 4% 4%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
-  -moz-transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
-  transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
-}
-
-.event .event_ul li .detail_area .title {
-  margin: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.event .event_ul li:hover {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.308);
-}
-
-.event .event_ul li>a>p>img {
-  transform: scale(1);
-  transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
-}
-
-.event .event_ul li:hover>a>p>img {
-  transform: scale(1.1);
-  transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
-}
-
-.event .event_ul li:hover>a>div {
-  background-color: #264989;
-  color: #fff;
-}
