--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -928,9 +928,8 @@
   /* team-cards */
   .team-inner {
     width: 80%;
-    margin-bottom: 2.5rem;
+    margin-bottom: 25px;
     display: inline;
-    float: left;
   }
 
   .team-item {
