--- a/demo/css/web-end.css
+++ b/demo/css/web-end.css
@@ -35,7 +35,7 @@
 
 .map-content {
   height: 400px;
-  width: 40%;
+  width: 39%;
 }
 
 .map-height {
@@ -51,7 +51,7 @@
 
 .content-text {
   color: #fff;
-  padding-top: 100px;
+  padding-top: 15%;
   /* padding-left: 10px;   */
 }
 
