--- a/demo/css/web-end.css
+++ b/demo/css/web-end.css
@@ -96,21 +96,246 @@
 }
 
 /* footer-part */
-.footer {
-  padding-top: 50px;
-  padding-bottom: 50px;
+
+@media screen and (min-width:1200px) {
+  .footer {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  
+  .footer .c-white {
+    color: #fff;
+  }
+  
+  .footer__wrapper {
+    display: flex;
+    padding-top: 50px;
+  }
+
+  .footer__links {
+    margin: 0px;
+    padding: 0;
+    justify-content: flex-start;
+    width: 100%;
+  }
+  
+  .footer__links ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .footer__links>li {
+    float: left;
+    margin-bottom: 30px;
+    margin-right: 7%;
+  }
+  
+  .footer__links {
+    list-style: none;
+  }
+  
+  .footer__newsletter {
+    justify-content: flex-end;
+    margin: 0;
+    max-width: 280px;
+    order: 1;
+    /* 移动端要order:-1 使得此元素在首位 */
+  }
+  
+  .footer a {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  .footer__newsletter h6,
+  .footer__links h6 {
+    margin-bottom: 1.2rem;
+  }
+  
+  .footer__newsletter p,
+  .footer__links a {
+    opacity: .5;
+    transition: opacity .3s ease-in-out;
+  }
+  
+  .footer__links a:hover {
+    cursor: pointer;
+    opacity: 1;
+    transition: opacity .3s ease-in-out;
+  }
+  
+  .footer__logo h1 {
+    margin: 0;
+  }
+  
+  .footer__newsletter p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+  
+  .newsletter.is-light input {
+    color: #fff;
+    border: 1px solid #fff;
+  }
+  
+  .reader {
+    outline: none;
+    background: transparent;
+    /* background-color: #003149; */
+    padding: 1.6em 1.4em 1.7em;
+    width: 100%;
+  }
+  
+  .newsletter button {
+    outline: none;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    -webkit-appearance: none;
+    background: transparent;
+    border: 0;
+    border-radius: 0;
+    cursor: pointer;
+    display: inline-block;
+    font-family: inherit;
+    height: 100%;
+    width: 70px;
+  }
+  
+  .newsletter button i {
+    font-size: 1em;
+    color: #fff;
+  }
 }
 
-.footer .c-white {
-  color: #fff;
+@media screen and (max-width:1200px) and (min-width:760px) {
+  .footer {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  
+  .footer .c-white {
+    color: #fff;
+  }
+  
+  .footer__wrapper {
+    padding-top: 50px;
+  }
+
+  .footer__links {
+    margin: 0px;
+    padding: 0;
+    justify-content: flex-start;
+    width: 100%;
+  }
+  
+  .footer__links ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .footer__links>li {
+    float: left;
+    margin-bottom: 30px;
+    margin-right: 7%;
+  }
+  
+  .footer__links {
+    list-style: none;
+  }
+  
+  .footer__newsletter {
+    justify-content: flex-end;
+    margin: 0;
+    max-width: 280px;
+    order: 1;
+    /* 移动端要order:-1 使得此元素在首位 */
+  }
+  
+  .footer a {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  .footer__newsletter h6,
+  .footer__links h6 {
+    margin-bottom: 1.2rem;
+  }
+  
+  .footer__newsletter p,
+  .footer__links a {
+    opacity: .5;
+    transition: opacity .3s ease-in-out;
+  }
+  
+  .footer__links a:hover {
+    cursor: pointer;
+    opacity: 1;
+    transition: opacity .3s ease-in-out;
+  }
+  
+  .footer__logo h1 {
+    margin: 0;
+  }
+  
+  .footer__newsletter p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+  
+  .newsletter.is-light input {
+    color: #fff;
+    border: 1px solid #fff;
+  }
+  
+  .reader {
+    outline: none;
+    background: transparent;
+    /* background-color: #003149; */
+    padding: 1.6em 1.4em 1.7em;
+    width: 100%;
+  }
+  
+  .newsletter button {
+    outline: none;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    -webkit-appearance: none;
+    background: transparent;
+    border: 0;
+    border-radius: 0;
+    cursor: pointer;
+    display: inline-block;
+    font-family: inherit;
+    height: 100%;
+    width: 70px;
+  }
+  
+  .newsletter button i {
+    font-size: 1em;
+    color: #fff;
+  }
 }
 
-.footer__wrapper {
-  display: flex;
-  padding-top: 50px;
-}
+@media screen and (max-width:760px){
+  .footer {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  
+  .footer .c-white {
+    color: #fff;
+  }
+  
+  .footer__wrapper {
+    display: flex;
+    padding-top: 50px;
+  }
 
-.footer__links {
+  .footer__links {
   margin: 0px;
   padding: 0;
   justify-content: flex-start;
@@ -205,6 +430,10 @@
   font-size: 1em;
   color: #fff;
 }
+
+}
+
+
 
 .colophon__wrapper {
   padding-top: 25px;
